<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.strandls.utility</groupId>
	<artifactId>utility-api</artifactId>
	<version>1.0.0</version>
	<packaging>war</packaging>
	<name>biodiv-utility</name>
	<url>https://github.com/strandls/biodiv-utility</url>

	<properties>
		<!-- Plugins property -->
		<maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
		<maven-dependency-plugin.version>3.1.1</maven-dependency-plugin.version>
		<swagger-ui.version>3.23.5</swagger-ui.version>
		<maven-war-plugin.version>3.2.2</maven-war-plugin.version>
		<replacer.version>1.5.3</replacer.version>
		<swagger-maven-plugin.version>3.1.1</swagger-maven-plugin.version>
		<exec-maven-plugin.version>1.3.2</exec-maven-plugin.version>
		<openapi-generator-cli.version>4.0.3</openapi-generator-cli.version>

		<!-- Project property -->
		<war-name>utility-api</war-name>
		<srcDir>src/main/webapp</srcDir>
		<base-path>/utility-api/api</base-path>
		<location>com.strandls.utility</location>

		<!-- Sonar Cloud -->
		<sonar.projectKey>strandls_biodiv-utility</sonar.projectKey>
		<sonar.organization>strandls</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<distributionManagement>
		<repository>
			<id>central</id>
			<name>jfrog-releases</name>
			<url>https://devartifactory.indiabiodiversity.org/libs-release</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>jfrog-snapshots</name>
			<url>https://devartifactory.indiabiodiversity.org/libs-snapshot</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>libs-release</name>
			<url>https://devartifactory.indiabiodiversity.org/libs-release</url>
		</repository>
		<repository>
			<snapshots />
			<id>snapshots</id>
			<name>libs-snapshot</name>
			<url>https://devartifactory.indiabiodiversity.org/libs-snapshot</url>
		</repository>
	</repositories>

	<dependencies>

		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.13</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.1</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.13</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
		<dependency>
			<groupId>javax.ws.rs</groupId>
			<artifactId>javax.ws.rs-api</artifactId>
			<version>2.1.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-server -->
		<dependency>
			<groupId>org.glassfish.jersey.core</groupId>
			<artifactId>jersey-server</artifactId>
			<version>2.31</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.containers/jersey-container-servlet-core -->
		<dependency>
			<groupId>org.glassfish.jersey.containers</groupId>
			<artifactId>jersey-container-servlet-core</artifactId>
			<version>2.31</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish.jersey.inject</groupId>
			<artifactId>jersey-hk2</artifactId>
			<version>2.31</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.glassfish.hk2/guice-bridge -->
		<dependency>
			<groupId>org.glassfish.hk2</groupId>
			<artifactId>guice-bridge</artifactId>
			<version>2.6.1</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>4.2.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.inject.extensions/guice-servlet -->
		<dependency>
			<groupId>com.google.inject.extensions</groupId>
			<artifactId>guice-servlet</artifactId>
			<version>4.2.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/javax/javaee-web-api -->
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-web-api</artifactId>
			<version>8.0.1</version>
			<scope>provided</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.media/jersey-media-json-jackson -->
		<dependency>
			<groupId>org.glassfish.jersey.media</groupId>
			<artifactId>jersey-media-json-jackson</artifactId>
			<version>2.31</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
		<dependency>
		    <groupId>com.fasterxml.jackson.core</groupId>
		    <artifactId>jackson-core</artifactId>
		    <version>2.16.1</version>
		</dependency>
		
		<dependency>
		    <groupId>com.sun.xml.bind</groupId>
		    <artifactId>jaxb-core</artifactId>
		    <version>2.3.0.1</version>
		</dependency>

		<dependency>
		    <groupId>com.sun.xml.bind</groupId>
		    <artifactId>jaxb-impl</artifactId>
		    <version>2.3.1</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/io.swagger/swagger-annotations -->
		<dependency>
		    <groupId>io.swagger</groupId>
		    <artifactId>swagger-annotations</artifactId>
		    <version>1.6.1</version>
		</dependency>
		
		
		<!-- https://mvnrepository.com/artifact/io.swagger/swagger-jersey2-jaxrs -->
		<dependency>
			<groupId>io.swagger</groupId>
			<artifactId>swagger-jersey2-jaxrs</artifactId>
			<version>1.6.1</version>
		</dependency>
		

		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-core</artifactId>
			<version>5.4.24.Final</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-hikaricp -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-hikaricp</artifactId>
			<version>5.2.12.Final</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.zaxxer/HikariCP -->
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>3.4.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.3.3</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
		<dependency>
		    <groupId>org.apache.httpcomponents</groupId>
		    <artifactId>httpclient</artifactId>
		    <version>4.5.10</version>
		</dependency>
		
		<dependency>
		    <groupId>com.strandls.biodiv</groupId>
		    <artifactId>authentication-utility</artifactId>
		    <version>1.0.0</version>
		</dependency>
		
		<dependency>
		    <groupId>com.strandls.biodiv</groupId>
		    <artifactId>activity-client</artifactId>
		    <version>1.0.0</version>
		</dependency>
		
		<dependency>
		    <groupId>com.strandls.biodiv</groupId>
		    <artifactId>naksha-client</artifactId>
		    <version>1.0.0</version>
		</dependency>

		<dependency>
		    <groupId>com.strandls.biodiv</groupId>
		    <artifactId>user-client</artifactId>
		    <version>1.0.0</version>
		</dependency>
		
	</dependencies>
	<build>
		<finalName>utility</finalName>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<!-- Download Swagger UI webjar. -->
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven-dependency-plugin.version}</version>
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>unpack</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>org.webjars</groupId>
									<artifactId>swagger-ui</artifactId>
									<version>${swagger-ui.version}</version>
								</artifactItem>
							</artifactItems>
							<outputDirectory> ${project.build.directory}/swagger-ui</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-war-plugin</artifactId>
				<version>${maven-war-plugin.version}</version>
				<configuration>
					<webResources combine.children="append">
						<resource>
							<directory>${project.build.directory}/swagger-ui/META-INF/resources/webjars/swagger-ui/${swagger-ui.version}</directory>
							<includes>
								<include>**/*.*</include>
							</includes>
							<targetPath>swagger-ui</targetPath>
						</resource>
					</webResources>
					<warName>${war-name}</warName>
					<warSourceDirectory>${srcDir}</warSourceDirectory>
				</configuration>
			</plugin>

			<plugin>
				<!-- Replace the OpenAPI specification example URL with the local one. -->
				<groupId>com.google.code.maven-replacer-plugin</groupId>
				<artifactId>replacer</artifactId>
				<version>${replacer.version}</version>
				<executions>
					<execution>
						<phase>prepare-package</phase>
						<goals>
							<goal>replace</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<file>${project.build.directory}/swagger-ui/META-INF/resources/webjars/swagger-ui/${swagger-ui.version}/index.html</file>
					<replacements>
						<replacement>
							<token>https://petstore.swagger.io/v2/swagger.json</token>
							<value>../api/swagger.json</value>
						</replacement>
					</replacements>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.github.kongchen</groupId>
				<artifactId>swagger-maven-plugin</artifactId>
				<version>${swagger-maven-plugin.version}</version>
				<configuration>
					<apiSources>
						<apiSource>
							<springmvc>false</springmvc>
							<locations>
								${location}
							</locations>
							<schemes>http</schemes>
							<host>localhost:8080</host>
							<basePath>${base-path}</basePath>
							<info>
								<title>Swagger file generation</title>
								<version>v1</version>
							</info>
							<outputPath>${project.basedir}/target</outputPath>
							<outputFormats>json</outputFormats>
							<swaggerDirectory>${project.basedir}/target</swaggerDirectory>
						</apiSource>
					</apiSources>
				</configuration>
				<executions>
					<execution>
						<phase>test</phase>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>${exec-maven-plugin.version}</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<executable>java</executable>
					<mainClass>org.openapitools.codegen.OpenAPIGenerator</mainClass>
					<commandlineArgs>
						generate -i ${project.basedir}/target/swagger.json -g java -o target/sdk --skip-validate-spec -c swagger-config.json
					</commandlineArgs>
					<includeProjectDependencies>true</includeProjectDependencies>
					<includePluginDependencies>true</includePluginDependencies>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.openapitools</groupId>
						<artifactId>openapi-generator-cli</artifactId>
						<version>${openapi-generator-cli.version}</version>
					</dependency>
				</dependencies>
			</plugin>
		</plugins>
	</build>
</project>
